--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "electron-packager": "^13.0.1"
   },
   "dependencies": {
+    "bootstrap": "^4.2.1",
     "electron-reload": "^1.4.0"
   }
 }
