--- a/app/package.json
+++ b/app/package.json
@@ -5,11 +5,13 @@
   "main": "main.js",
   "scripts": {
     "start": "electron main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "package-win": "electron-packager . tutorial-robokit --overwrite --asar=true --platform=win32 --arch=x64 --prune=true --out=release-builds --electronVersion=1.4.13"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "electron": "^4.0.2",
     "electron-packager": "^13.0.1"
   },
   "dependencies": {
