--- a/app/package.json
+++ b/app/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "electron main.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "package-win": "electron-packager . tutorial-robokit --overwrite --asar=true --platform=win32 --arch=x64 --prune=true --out=release-builds --electronVersion=1.4.13"
+    "package-win": "electron-packager . tutorial-robokit --overwrite --platform=win32 --arch=x64 --prune=true --out=release-builds --electronVersion=1.4.13"
   },
   "author": "",
   "license": "ISC",
