"Level zero, incomplete"

--- a/app/JSONFiles/Components.json
+++ b/app/JSONFiles/Components.json
@@ -1,5 +1,5 @@
 {
-  "Resistencia":
+  "Resistencias":
 
             {
               "Descripcion": "Se denomina resistencia eléctrica a la oposición que se le genera al flujo de electrones cuando se mueven a través de un material conductor; es decir, es la capacidad eléctrica que posee un dispositivo para contrarrestar el efecto de la corriente eléctrica, con el objetivo de controlar el grado en que se disipa dicha corriente. Un resistor es un componente electrónico diseñado para introducir una resistencia eléctrica determinada entre dos puntos de un circuito eléctrico.",
