--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.2.1",
-    "electron-reload": "^1.4.0"
+    "electron-reload": "^1.4.0",
+    "load-json-file": "^5.2.0"
   }
 }
